--- a/1893.md
+++ b/1893.md
@@ -1,113 +1,372 @@
-# IS 1893 (Part 1):2016 – Earthquake-Resistant Design of Structures  
-**Clause-by-Clause Detailed Summary**  
+# Clause-wise Summary of IS 1893
 
----  
+---
 
-## **1. Clause 1: Scope**  
-- **Purpose**: Governs the seismic design of buildings, bridges, and industrial structures in India.  
-- **Exclusions**:  
-  - Nuclear power plants, dams, and offshore structures (require site-specific hazard studies).  
-  - Structures in non-seismic zones (Zone I removed post-2002).  
-- **Key Objectives**:  
-  - Ensure **life safety** during earthquakes.  
-  - Allow controlled damage to dissipate energy without collapse.  
-  - Complement material codes like IS 456 (concrete) and IS 800 (steel).  
-- **Philosophy**: Balance safety and economy using probabilistic seismic hazard principles.  
+## Clause 1: SCOPE
 
----  
+### 1.1 Purpose & Coverage
+- Part 1 focuses on **earthquake hazard assessment** for designing earthquake-resistant structures, including:
+  - Buildings, bridges, dams, retaining walls, industrial structures, and liquid-retaining tanks.
+  - **Earthquake-resistant design details for buildings** are covered in Part 1; other structures are addressed in Parts 2–5.
 
-## **2. Clause 2: Terminology**  
-- **Design Basis Earthquake (DBE)**:  
-  - Ground shaking with a **10% probability of exceedance in 50 years** (475-year return period).  
-  - Structures designed for repairable damage but no collapse.  
-- **Response Reduction Factor (R)**:  
-  - Reflects ductility (e.g., \( R = 5 \) for ductile RC frames, \( R = 3 \) for masonry).  
-- **Importance Factor (I)**:  
-  - \( I = 1.5 \) for hospitals, \( I = 1.0 \) for residential buildings.  
-- **Seismic Weight**: Includes dead load + 25% live load for storage areas.  
+### 1.2 All Structures Must Comply
+- **All permanent structures**, including parking lots, security cabins, and ancillary buildings, must follow earthquake design rules in this standard.
 
----  
+### 1.3 Temporary Structures Included
+- Even **temporary elements** (e.g., scaffolding, excavations) must adhere to earthquake safety guidelines.
 
-## **3. Clause 3: Symbols and Notations**  
-- **\( Z \)**: Zone factor (e.g., 0.36 for Zone V). Represents peak ground acceleration (PGA).  
-- **\( S_a/g \)**: Soil- and period-dependent spectral acceleration ratio.  
-- **\( T \)**: Fundamental natural period of the structure (in seconds).  
-- **\( R \)**: Ductility-based response reduction factor.  
-- **\( I \)**: Importance factor for critical structures.  
+### 1.4 Construction Features Not Covered
+- This standard **does not specify construction techniques** (e.g., materials, methods). For guidance, refer to other Indian Standards:
+  - **IS 4326** (earthquake-resistant construction), **IS 13827/13828** (low-strength/earthen buildings), **IS 13920** (concrete ductility), **IS 13935** (building repairs), **IS 15988** (evaluating existing buildings).
 
----  
+### 1.5 Critical Structures
+- **High-risk structures** (e.g., nuclear plants, large dams) must meet this standard’s requirements **as a minimum**.
+- Additional safety measures may be needed based on **site-specific hazard studies**.
 
-## **4. Clause 4: General Requirements**  
-- **Collapse Prevention**:  
-  - Ensure structural stability even if non-structural elements fail.  
-  - Follow **strong column-weak beam** design.  
-- **Non-Structural Safety**:  
-  - Secure partitions, cladding, and equipment to prevent hazards.  
-- **Material Compliance**:  
-  - Use IS 13920 for ductile reinforcement detailing in concrete.  
-  - Avoid brittle failure in steel connections (IS 800).  
+---
+
+## Clause 2: REFERENCES
+
+Lists **Indian Standards (IS)** that support this document. Key categories include:
+
+### Materials & Construction
+- **IS 456:2000**: Rules for plain/reinforced concrete.
+- **IS 800:2007**: Steel construction guidelines.
+- **IS 1343:2012**: Prestressed concrete practices.
+- **IS 1905:1987**: Unreinforced masonry design.
+
+### Load Standards
+- **IS 875 (Parts 1–5)**: Covers dead loads, wind, snow, and special loads.
+
+### Soil & Foundation Testing
+- **IS 1498:1970**: Soil classification.
+- **IS 2131:1981**: Soil penetration tests.
+- **IS 6403:1981**: Shallow foundation bearing capacity.
+
+### Earthquake-Resistant Design
+- **IS 1893 (Parts 2–4)**: Specific guidelines for tanks, bridges, retaining walls, and industrial structures.
+- **IS 4326:2013**: Building construction practices for earthquake resistance.
+
+### Machine Foundations
+- **IS 2974 (Parts 1–5)**: Design rules for foundations under machinery (e.g., hammers, rotary machines).
+
+### Guidelines & Glossaries
+- **IS 13827/13828**: Improving earthquake resistance in earthen/low-strength masonry buildings.
+- **IS 2809/2810**: Soil engineering and dynamics terminology.
+- **National Building Code (Part 6)**: Structural design for masonry.
+
+---
+
+## Clause 3: TERMINOLOGY
+
+### General Definitions
+- **Closely-Spaced Modes**: Natural oscillation modes with frequencies differing by ≤10% of the lower frequency.
+- **Critical Damping**: Damping level where free vibration stops oscillating.
+- **Damping**: Reduction in oscillation amplitude due to friction/material inelasticity, expressed as a fraction of critical damping.
+- **Design Acceleration Spectrum**: Smoothed graph of maximum acceleration versus natural frequency for earthquake design.
+- **Design Horizontal Acceleration Coefficient ($A_h$)**: Horizontal acceleration used for structural design.
+- **Design Horizontal Force**: Seismic force prescribed by the standard.
+- **Ductility**: Ability to undergo large deformations without losing strength/stiffness.
+- **Epicentre**: Surface point directly above the earthquake origin.
+- **Floor Response Spectrum**: Response spectrum of a floor during base shaking.
+- **Importance Factor ($I$)**: Factor reflecting a structure’s criticality (e.g., post-earthquake use, economic value).
+- **Intensity of Earthquake**: Measured on the **MSK scale** (Roman numerals).
+- **Liquefaction**: Saturated soil losing strength during shaking, behaving like a fluid (see **Annex F**).
+- **Lithological Features**: Geological characteristics (structure, mineral composition, grain size).
+
+### Structural Dynamics
+- **Modal Mass ($M_k$)**: Effective mass contributing to mode *k* oscillation.
+- **Modal Participation Factor ($P_k$)**: Contribution of mode *k* to overall oscillation.
+- **Mode Shape Coefficient ($\phi_{ik}$)**: Deformation pattern at degree of freedom *i* in mode *k*.
+- **Natural Period ($T_k$)**: Time for one oscillation cycle in mode *k*.
+- **Fundamental Lateral Translational Natural Period ($T_1$)**: Longest oscillation period in the lateral direction.
+- **Normal Mode of Oscillation**: All points move harmonically at the same frequency.
+
+### Ground Motion & Response
+- **Peak Ground Acceleration (PGA)**: Maximum horizontal ground acceleration during shaking.
+- **Response Reduction Factor ($R$)**: Factor reducing elastic base shear to design level (accounts for ductility/overstrength).
+- **Response Spectrum**: Maximum responses (acceleration/velocity/displacement) for different periods under the same earthquake.
+- **Response Acceleration Coefficient ($S_a/g$)**: Normalized acceleration spectrum value for design.
+
+### Seismic Mass & Weight
+- **Seismic Mass**: Seismic weight divided by gravity (for floors/structures).
+- **Seismic Weight ($W$)**: Includes dead loads, permanent elements, and partial live loads (e.g., 25–50% imposed loads).
+- **Seismic Zone Factor ($Z$)**: PGA value assigned to seismic zones (e.g., Zone II to V in India).
+
+### Analysis Methods
+- **Time History Analysis**: Dynamic response analysis over time for specific ground motion.
+
+---
+
+## Clause 4: SPECIAL TERMINOLOGY FOR BUILDINGS
+
+### Structural Basics
+- **Base**: Level transferring inertia forces to the ground (varies with foundation type, e.g., pile cap top for pile foundations).
+- **Base Dimension ($d$)**: Building dimension along the shaking direction.
+- **Principal Plan Axes**: Two orthogonal directions defining the building geometry.
+
+### Forces & Load Paths
+- **Design Seismic Base Shear ($V_B$)**: Total lateral force for design.
+- **Diaphragm**: Horizontal system (e.g., floors) transferring lateral forces to vertical elements.
+- **Horizontal Bracing System**: Truss system acting as a diaphragm.
+- **Lateral Force Resisting System**: Members resisting seismic forces (e.g., walls, frames).
+- **Storey Shear ($V_i$)**: Sum of lateral forces above storey *i*.
+
+### Centers & Eccentricity
+- **Centre of Mass (CM)**: Point where floor inertia forces act.
+- **Centre of Resistance (CR)**: Point where resistance forces act without causing twist.
+- **Eccentricity**: Distance between CM and CR (design vs. static).
+
+### Structural Systems
+- **Moment-Resisting Frame**: Beams/columns resisting forces via flexure.
+  - **OMRF**: Ordinary frame (no ductile detailing).
+  - **SMRF**: Special ductile frame (meets IS 13920/IS 800).
+- **RC Structural Wall**: Reinforced wall resisting in-plane lateral forces.
+  - **Ordinary Wall**: No ductile detailing.
+  - **Special Wall**: Ductile detailing per IS 13920.
+- **Core Walls with Outriggers & Belt Truss**: System enhancing stiffness using core walls, perimeter columns, and connecting beams.
+
+### Storey Definitions
+- **Soft Storey**: Lateral stiffness less than the storey above.
+- **Weak Storey**: Lateral strength less than the storey above (excludes URM infills).
+- **Storey Drift**: Relative displacement between adjacent floors.
+- **Storey Lateral Shear Strength ($S_i$)**: Total strength of lateral elements.
+- **Storey Lateral Stiffness ($K_i$)**: Total stiffness of lateral elements.
+
+### Height & Geometry
+- **Height of Floor ($h_i$)**: Vertical elevation from the base to floor *i*.
+- **Height of Building ($h$)**: From base to roof (excludes basements if walls are connected).
+
+### Secondary Effects
+- **P-Delta Effect**: Additional shear/moment due to vertical loads interacting with lateral displacement.
+
+### Density & Material
+- **RC Structural Wall Plan Density ($\rho_w$)**: Ratio of RC wall area to plinth area (%).
+
+---
+
+## Clause 5: SYMBOLS
+
+The symbols and notations below apply to earthquake-resistant design provisions:
+
+### General Earthquake Parameters
+- **$A_h$**: Design horizontal earthquake acceleration coefficient.
+- **$A_k$**: Horizontal earthquake acceleration spectrum value for mode *k*.
+- **$I$**: Importance factor (reflects the structure’s criticality).
+- **$R$**: Response reduction factor (accounts for ductility/overstrength).
+- **$Z$**: Seismic zone factor (PGA value based on seismic zone).
+- **$\mathbb{g}$**: Acceleration due to gravity (≈9.81 m/s²).
+
+### Structural Dimensions
+- **$b_1$**: Plan dimension of floor *i* perpendicular to the shaking direction.
+- **$d$**: Base dimension of the building (in metres) along the shaking direction.
+- **$h$**: Total height of the structure (in metres).
+- **$h_1$**: Height from the building’s base to floor *i*.
+- **$L$**: Dimension of the building in the considered direction.
+- **$n$**: Number of storeys or floors (excludes basements as per Clause 4).
+
+### Loads & Responses
+- **$DL$**: Response quantity due to dead load (permanent weight).
+- **$IL$**: Response quantity due to imposed load (temporary loads).
+- **$EL_X, EL_Y, EL_Z$**: Earthquake-induced responses for shaking along X, Y, and Z directions.
+- **$Q_i$**: Lateral force at floor *i*.
+- **$Q_{ik}$**: Lateral force at floor *i* in mode *k*.
+- **$W$**: Seismic weight of the building (sum of all floors).
+- **$W_i$**: Seismic weight of floor *i*.
+
+### Dynamic Properties & Modal Analysis
+- **$C$**: Index for closely-spaced modes (modes with ≤10% frequency difference).
+- **$K_1$**: Lateral translational stiffness of storey *i*.
+- **$M_k$**: Modal mass in mode *k*.
+- **$P_k$**: Modal participation factor for mode *k*.
+- **$\phi_{ik}$**: Mode shape coefficient at floor *i* in mode *k*.
+- **$\rho_{ji}$**: Coefficient for the Complete Quadratic Combination (CQC) method.
+
+### Natural Periods & Frequencies
+- **$T$**: Undamped natural period of oscillation (in seconds).
+- **$T_a$**: Approximate fundamental period (calculated per code).
+- **$T_k$**: Natural period of mode *k*.
+- **$T_i$**: Fundamental natural period (longest period).
+- **$\omega_i$**: Circular frequency in mode *i* (rad/s).
+
+### Shear Forces & Base Shear
+- **$V_B$**: Design seismic base shear (total lateral force at the base).
+- **$V_i$**: Peak storey shear in storey *i* (all modes).
+- **$V_{ik}$**: Shear force in storey *i* for mode *k*.
+- **$V_{\text{roof}}$**: Peak shear force at the top storey.
+
+### Soil & Site Parameters
+- **$N$**: Corrected Standard Penetration Test (SPT) value for soil.
+- **$S_a/g$**: Design acceleration coefficient (based on soil/rock and natural period).
+
+### Miscellaneous
+- **$N_m$**: Number of modes to consider (as per Section 7.7.5.2).
+- **$\lambda$**: Peak response (e.g., forces, displacements) from all modes.
+- **$\lambda_k, \lambda_c$**: Peak response in mode *k* or for closely-spaced mode *c*.
+- **$\lambda^*$**: Peak response from closely-spaced modes only.
+
+---
+
+## Clause 6: GENERAL PRINCIPLES & DESIGN ASSUMPTIONS
+
+### 6.1 General Principles
+- **Ground Motion**:  
+  Earthquakes shake buildings horizontally (side-to-side) and vertically (up-down). Horizontal shaking is usually stronger, but vertical shaking can destabilize structures like bridges, dams, or buildings with large overhangs.
+- **Structural Response**:  
+  How a building reacts to shaking depends on its foundation, materials (e.g., concrete vs. steel), and soil type. Buildings on soft soil (like loose sand or clay) shake more violently than those on rock.
+- **Ductility & Overstrength**:  
+  - **Ductility**: Buildings must bend and flex without collapsing. Think of it like a tree swaying in the wind.
+  - **Overstrength**: Hidden strength reserves in materials (e.g., extra reinforcement in concrete) to handle forces stronger than predicted.
+- **Soil-Structure Interaction**:  
+  Soft soils amplify shaking, so foundations must be designed carefully. On rock/hard soil, this effect is ignored.
+
+### 6.2 Assumptions
+1. **Resonance**:  
+   Rarely occurs (except in tall buildings on soft soil, where shaking frequency matches the building’s natural sway).
+2. **No Combined Extreme Loads**:  
+   Earthquakes are assumed *not* to happen alongside worst-case winds or floods.
+3. **Material Behavior**:  
+   Use standard stiffness values unless advanced testing is done.
+
+### 6.3 Load Combinations & Design
+- **Horizontal Loads**:  
+  Buildings must resist full sideways force in one direction (e.g., left-right) plus 30% of the force from the perpendicular direction (e.g., front-back).
+- **Vertical Loads**:  
+  Critical for bridges, tall buildings, or soft soil. Vertical shaking reduces effective weight, risking collapse of heavy elements like beams.
+- **3D Shaking**:  
+  Combine forces from all directions (left-right, front-back, up-down) but assume only 30% contribution from the less critical directions.
 - **Foundation Design**:  
-  - Address liquefaction risks in loose soils.  
-  - Use deep foundations (e.g., piles) in soft soils.  
+  - **Rock/Hard Soil**: Can safely handle 50% more load during earthquakes.
+  - **Soft Soil**: No extra load allowed—use deep piles anchored in stable layers.
+  - **Soil Testing**: Use the Standard Penetration Test (SPT) to check soil strength. Poor soils (low SPT values) need ground improvement.
 
----  
-
-## **5. Clause 5: Seismic Zoning**  
-- **Zone Classification**:  
-  - **Zone II**: Low hazard (e.g., parts of Karnataka).  
-  - **Zone V**: Very high hazard (e.g., Himalayan regions).  
-- **Basis**:  
-  - Historical earthquake data (e.g., 2001 Bhuj earthquake).  
-  - Tectonic plate boundaries (e.g., Indian-Eurasian plate collision).  
-- **Hazard Maps**:  
-  - Updated to reflect active fault lines and regional seismicity.  
-
----  
-
-## **6. Clause 6: Design Parameters**  
-### **6.3 Design Response Spectrum**  
+### 6.4 Design Acceleration Spectrum
+- **Seismic Zones**:  
+  The country is split into 4 zones (II to V). Zone V has the highest earthquake risk.
 - **Soil Types**:  
-  - **Type I (Rock)**: Minimal amplification.  
-  - **Type IV (Soft Soil)**: Amplifies long-period shaking (critical for tall buildings).  
-- **Key Features**:  
-  - Short-period buildings experience peak ground acceleration.  
-  - Mid-rise buildings (0.1s < T < 0.55s) face maximum spectral acceleration (2.5g).  
-  - Flexible buildings (T > 0.55s) see reduced forces.  
+  - **Type I (Rock/Hard)**: Stable, minimal shaking.
+  - **Type II (Medium)**: Stiff clay or dense sand—moderate shaking.
+  - **Type III (Soft)**: Loose sand or soft clay—intense shaking.
+- **Design Force**:  
+  Calculated based on:
+  - **Zone Risk** (higher zones = stronger forces).
+  - **Building Importance** (hospitals = 1.5× importance factor; houses = 1.0×).
+  - **Soil Type** (soft soil = higher forces).
+- **Underground Structures**:  
+  Deeper parts (below 30m) experience half the shaking force. For depths between 0–30m, forces reduce gradually.
 
-### **6.4.2 Design Horizontal Seismic Coefficient**  
-- **Purpose**: Calculate lateral force coefficient for base shear.  
-- **Factors**:  
-  - Zone factor (\( Z \)), soil amplification (\( S_a/g \)), ductility (\( R \)).  
+### Key Concepts
+1. **Ductility Saves Lives**:  
+   Buildings that bend (e.g., steel frames, well-reinforced concrete) survive better than brittle ones.
+2. **Soil Dictates Safety**:  
+   Soft soils are risky—avoid them for critical structures or use deep foundations.
+3. **Zones & Importance**:  
+   High-risk zones (IV/V) and critical buildings (hospitals) need stricter design.
+4. **Load Combinations**:  
+   Design for shaking in all directions, but prioritize the strongest forces.
 
----  
+**Practical Example**:  
+A hospital in Zone V on soft soil would need:  
+- Deep piles to anchor it in stable soil.  
+- Extra reinforcement (ductile design) to handle bending.  
+- Higher design forces (1.5× importance factor).
 
-## **7. Clause 7: Structural Design Provisions**  
-### **7.6 Vertical Distribution of Base Shear**  
-- **Rules**:  
-  - **Short buildings (T < 0.5s)**: Linear force distribution (higher forces at lower floors).  
-  - **Tall buildings (T > 2.5s)**: Parabolic distribution (higher forces at upper floors).  
-- **Practical Implication**: Ensures realistic load distribution based on building flexibility.  
+---
 
-### **7.12.4 Torsional Provisions**  
-- **Key Requirements**:  
-  - **Accidental Eccentricity**: Assume ±5% asymmetry in mass/stiffness.  
-  - **Dynamic Amplification**: Increase torsion by 50% for safety.  
-  - **Irregular Buildings**: Avoid soft-story configurations (e.g., open ground floors).  
+## Clause 7: EARTHQUAKE LOADS, ANALYSIS, AND DESIGN METHODS
 
----  
+*Note: Sub-clause headings have been formatted with a smaller heading level to ensure a professional, uniform text size.*
 
-## **Practical Applications**  
-1. **Zone-Specific Design**:  
-   - Hospitals in Zone V need stricter detailing than warehouses in Zone II.  
-2. **Soil-Structure Interaction**:  
-   - Tall buildings on soft soil require deep foundations.  
-3. **Case Study**:  
-   - The 1999 Chamoli earthquake highlighted risks of torsional failure in asymmetrical buildings.  
+#### 7.2 Minimum Design Earthquake Horizontal Lateral Force
+Specifies zone-dependent lateral force percentages (ρ) for buildings. Higher seismic zones (e.g., Zone V) require greater lateral forces to account for increased earthquake risk. This ensures buildings are designed to withstand minimum seismic forces proportional to regional hazard levels.
 
----  
+#### 7.2.3 Importance Factor (I)
+Assigns higher importance factors to critical buildings (hospitals, schools, emergency facilities: **I=1.5**) and large residential/commercial structures (**I=1.2**). This encourages conservative design for high-occupancy or essential buildings, with flexibility for owners to adopt stricter values.
 
-## **Key Takeaways**  
-- **Life Safety**: Prevent collapse under DBE.  
-- **Ductility**: Use \( R \)-factors to allow controlled damage.  
-- **Soil Impact**: Soft soil amplifies shaking for tall structures.  
-- **Torsion**: Address asymmetry to avoid rotational failure.  
+#### 7.2.4 Damping Ratio
+Mandates a 5% damping ratio for all buildings, irrespective of construction material. This accounts for energy dissipation during inelastic deformations under earthquakes, applicable to both static and dynamic analysis methods.
+
+#### 7.2.5 Design Acceleration Spectrum
+Defines normalized acceleration coefficients based on soil type and structural period. Soil–structure interaction is considered, with detailed calculations referenced in Section 6.4.2.
+
+#### 7.2.6 Response Reduction Factor (R)
+Rewards ductile and redundant structural systems with higher **R-values** (e.g., special moment frames: **R=5** vs. ordinary frames: **R=3**). This encourages designs that absorb energy through controlled deformation rather than brittle failure.
+
+#### 7.2.7 Dual System
+Requires combining moment-resisting frames with structural walls/bracings. Both systems share lateral forces proportionally, with frames independently resisting ≥25% of the base shear, thereby enhancing redundancy and system reliability.
+
+#### 7.3 Imposed Loads for Seismic Weight
+- **Floor Loads**: 25–50% of imposed loads (based on intensity) contribute to seismic weight.
+- **Roof Loads**: Excludes general roof loads but includes permanently fixed equipment.
+- **Adjustments**: Allows site-specific load assessments, provided they meet minimum standards.
+
+#### 7.3.6 Interior Partition Weight
+Includes partition weights (≥0.5 kN/m²) in seismic calculations, ensuring inertial effects are accounted for, though partitions do not contribute to structural resistance.
+
+#### 7.4 Seismic Weight
+- **Floor Weight**: Full dead load plus apportioned imposed loads.
+- **Column/Wall Weights**: Distributed to adjacent floors.
+- **Mid-Storey Weights**: Allocated inversely to the distance from floors.
+
+#### 7.6 Equivalent Static Method
+A simplified approach for **regular buildings <15 m in Zone II**:
+1. Compute total base shear ($V_B$) using seismic weight and the acceleration coefficient.
+2. Distribute $V_B$ vertically based on floor masses.
+3. Allocate forces horizontally via diaphragm action.
+
+#### 7.6.1 Design Base Shear
+$V_B$ depends on:
+- **Horizontal Acceleration Coefficient ($A_h$)**: Derived from soil type and natural period.
+- **Seismic Weight ($W$)**: Total building mass.
+
+#### 7.6.2 Natural Period Estimation
+Varies by structural system:
+- **Bare MRF**: Shorter period for RC versus steel frames.
+- **RC Walls**: Period depends on wall area and building geometry.
+- **Other Buildings**: Simplified formula using height and base dimensions.
+
+#### 7.6.3 Base Shear Distribution
+- **Vertical**: Proportional to floor mass and height.
+- **Horizontal**: Rigid diaphragms distribute forces based on element stiffness; flexible diaphragms require deformation analysis.
+
+#### 7.7 Dynamic Analysis Method
+Mandatory for **irregular/tall buildings (≥15 m in Zones III–V)**:
+- **Time History Method**: Uses site-specific ground motion records.
+- **Response Spectrum Method**: Applies standardized/site-specific spectra.
+- **Safety Check**: Dynamic base shear must be ≥ the static method value.
+
+#### 7.7.5 Modal Analysis
+- **Natural Modes**: Identify the building’s vibration patterns.
+- **Mode Combination**: Ensures cumulative forces account for all significant modes (using CQC/SRSS methods).
+- **Simplified Analysis**: Lumped mass model for regular buildings.
+
+#### 7.8 Torsion
+Addresses rotational forces due to misalignment between mass and stiffness centers.
+- **Design Eccentricity**: Combines static and accidental offsets (with 1.5× amplification for dynamic cases).
+
+#### 7.9 RC Frames with URM Infills
+- **Modeling**: Infill walls are modeled as diagonal struts.
+- **Stiffness/Strength**: Ensures uniformity to avoid weak stories.
+
+#### 7.10 Open Storeys
+Mitigates weak/soft stories by reinforcing open levels with RC walls or braced frames. Requirements include:
+- ≥80% stiffness and ≥90% strength relative to adjacent floors.
+- 2% RC wall density in high seismic zones.
+
+#### 7.11 Deformation Control
+- **Storey Drift**: Limited to 0.4% of the storey height to prevent damage.
+- **Separation Distance**: Prevents pounding between buildings using amplified displacements ($R \times \Delta$).
+
+#### 7.12 Non-Structural Elements
+- **Foundations**: Bans weak systems in soft soils; requires ties in high seismic zones.
+- **Cantilevers**: Designed for 5× seismic forces.
+- **Compound Walls**: Conservative design ($A_h = 1.25Z$).
+- **Connections**: Secure all components to resist ≥5% of loads.
+
+#### Key Philosophy
+1. **Regularity**: Avoid plan/vertical irregularities.
+2. **Ductility**: Prioritize systems that deform without failing.
+3. **Redundancy**: Dual systems and load-sharing ensure reliability.
+4. **Safety Margins**: Conservative assumptions for uncertainties.
+
+*Summaries focus on design intent, structural behavior, and safety principles, omitting formulas for readability.* 🏢🌍
